# yarli

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  install.sh  orchestrator.yml  yarli.example.toml
.githooks/: commit-msg  post-checkout  post-merge  pre-commit  pre-push
.github/workflows/: ci.yml
agent_reports/: PRINCIPAL_TECHNICAL_ARCHITECT.md
crates/yarli-api/: Cargo.toml
crates/yarli-api/src/: lib.rs  server.rs
crates/yarli-api/tests/: postgres_integration.rs
crates/yarli-chaos/: Cargo.toml
crates/yarli-chaos/src/: lib.rs
crates/yarli-cli/: Cargo.toml  build.rs
crates/yarli-cli/src/: cli.rs  commands.rs  config.rs  events.rs  evidence.rs  lib.rs  main.rs  mode.rs  observers.rs  persistence.rs  plan.rs  projection.rs  prompt.rs  render.rs  run_scope.rs  test_helpers.rs  tranche.rs  workspace.rs
crates/yarli-cli/src/config/: migrate.rs  mod.rs
crates/yarli-cli/src/dashboard/: copy_mode.rs  input.rs  mod.rs  overlay.rs  renderer.rs  state.rs  widgets.rs
crates/yarli-cli/src/stream/: backend_output.rs  events.rs  headless.rs  mod.rs  renderer.rs  spinner.rs  style.rs
crates/yarli-cli/tests/: parallel_merge_integration.rs  postgres_integration.rs  tranches_preflight_integration.rs
crates/yarli-core/: Cargo.toml
crates/yarli-core/src/: domain.rs  error.rs  explain.rs  fsm.rs  lib.rs  shutdown.rs
crates/yarli-core/src/entities/: command_execution.rs  continuation.rs  merge_intent.rs  mod.rs  run.rs  task.rs  tests.rs  transition.rs  worktree_binding.rs
crates/yarli-core/src/fsm/: command.rs  merge.rs  run.rs  task.rs  worktree.rs
crates/yarli-exec/: Cargo.toml
crates/yarli-exec/src/: cgroup.rs  error.rs  introspect.rs  journal.rs  lib.rs  overwatch.rs  pidfd.rs  runner.rs
crates/yarli-gates/: Cargo.toml
crates/yarli-gates/src/: engine.rs  error.rs  evidence.rs  lib.rs
crates/yarli-git/: Cargo.toml
crates/yarli-git/src/: commit_message.rs  constants.rs  error.rs  lib.rs  merge.rs  submodule.rs  tests.rs  worktree.rs
crates/yarli-memory/: Cargo.toml
crates/yarli-memory/src/: adapter.rs  error.rs  in_memory.rs  lib.rs  memory_cli.rs  types.rs
crates/yarli-observability/: Cargo.toml
crates/yarli-observability/src/: audit.rs  lib.rs  metrics.rs  run_analyzer.rs  tracing_init.rs
crates/yarli-policy/: Cargo.toml
crates/yarli-policy/src/: error.rs  lib.rs  rules.rs  token.rs
crates/yarli-queue/: Cargo.toml
crates/yarli-queue/src/: error.rs  lib.rs  memory.rs  postgres.rs  queue.rs  scheduler.rs  task_bindings.rs
crates/yarli-queue/src/memory/: tests.rs
crates/yarli-queue/tests/: postgres_integration.rs
crates/yarli-store/: Cargo.toml
crates/yarli-store/migrations/: 0001_init.sql  0002_indexes.sql  0003_run_drained_state.sql
crates/yarli-store/src/: error.rs  event_store.rs  lib.rs  memory.rs  postgres.rs
crates/yarli-store/src/memory/: tests.rs
crates/yarli-store/tests/: postgres_integration.rs
crates/yarli-sw4rm/: Cargo.toml
crates/yarli-sw4rm/src/: agent.rs  bridge.rs  config.rs  lib.rs  messages.rs  mock.rs  orchestrator.rs  transport.rs
docker/: healthcheck.sh
docs/: ACCEPTANCE_RUBRIC.md  API_CONTRACT.md  CI_CD_INTEGRATION_EXAMPLES.md  CLI.md  CLI_HELP.md  CONSISTENCY_CONTRACT.md  MEMORY_POLICY.md  OPERATIONS.md  RELEASE_BASELINE.md  yarli_run_scope_architecture.md
docs/ci/: wait-for-completion.sh
evidence/018/: README.md
evidence/r10/: card-r10-01a1.md  card-r10-01a2.md  card-r10-01a3.md  card-r10-01b-core-gating.md  card-r10-01b.md  card-r10-01c.md  card-r10-01d.md  card-r10-02.md  card-r10-03.md  card-r10-04.md  card-r10-05.md  card-r10-06.md  card-r10-07.md  card-r10-08.md  card-r10-09.md  card-r10-10.md
evidence/r11/: card-r11-01.md  card-r11-02.md  card-r11-03.md  card-r11-04.md  card-r11-05.md
evidence/r12/: README.md  card-r12-01.md  card-r12-02.md  card-r12-03.md  card-r12-04.md  card-r12-05.md  card-r12-06.md
evidence/r13/: card-r13-01.md  card-r13-02.md  card-r13-03.md  card-r13-04.md  card-r13-05.md  card-r13-06.md
evidence/r14/: card-r14-01.md  card-r14-02.md  card-r14-03.md  card-r14-04.md  card-r14-05.md  card-r14-06.md
evidence/r15/: card-r15-01.md  card-r15-02.md  card-r15-03.md  card-r15-04.md  card-r15-05.md  card-r15-06.md
evidence/r16/: card-r16-01.md  card-r16-02.md
evidence/r4v/: README.md
evidence/r5/: README.md  card-r5-01.md  card-r5-02.md
evidence/r6/: README.md
evidence/r7/: README.md
evidence/r8/: README.md  card-r8-01.md  card-r8-02.md  card-r8-03.md  card-r8-04.md  card-r8-06.md  card-r8-07.md  card-r8-08.md  card-r8-09.md  card-r8-10.md  card-r8-11.md  card-r8-12.md  card-r8-13.md  card-r8-14.md  card-r8-15.md  card-r8-16.md  card-r8-17.md
evidence/r9/: card-r9-01.md  card-r9-02.md  card-r9-03.md  card-r9-04.md  card-r9-05.md  card-r9-06.md  card-r9-07.md  card-r9-08.md
scripts/: docker_build_image.sh  docker_smoke_test.sh  setup-hooks.sh  verify_acceptance_rubric.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: budget_breach_run_failure.rs  concurrency_stress.rs  concurrent_runs.rs  crash_recovery.rs  event_trail_consistency.rs  gate_verification_retry.rs  graceful_shutdown.rs  long_running_stability.rs  multi_task_lifecycle.rs  resource_exhaustion.rs  time_based_failure_scenarios.rs
