[package]
name = "yarli"
description = "CLI, stream mode renderer, interactive TUI, scheduler, store, and API"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahulrajaram/yarli"
homepage = "https://github.com/rahulrajaram/yarli"
documentation = "https://docs.rs/yarli"
build = "crates/yarli-cli/build.rs"

[lib]
name = "yarli_cli"
path = "crates/yarli-cli/src/lib.rs"

[[bin]]
name = "yarli"
path = "crates/yarli-cli/src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
sw4rm-sdk = "0.4"
tokio-stream = { version = "0.1", optional = true }
tonic = { version = "0.12", optional = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26"
prometheus-client = "0.23"
ratatui = "0.29"
crossterm = "0.28"
owo-colors = "4"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
libc = "0.2"

[features]
default = []
sw4rm = ["dep:tokio-stream", "dep:tonic"]
chaos = []
debug-api = []
test-support = []

[dev-dependencies]
assert_matches = "1.5"
proptest = "1"
serial_test = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
axum08 = { package = "axum", version = "0.8" }

[[test]]
name = "yarli_api_postgres_integration"
path = "crates/yarli-api/tests/postgres_integration.rs"

[[test]]
name = "yarli_parallel_merge_integration"
path = "crates/yarli-cli/tests/parallel_merge_integration.rs"

[[test]]
name = "yarli_cli_postgres_integration"
path = "crates/yarli-cli/tests/postgres_integration.rs"

[[test]]
name = "yarli_tranches_preflight_integration"
path = "crates/yarli-cli/tests/tranches_preflight_integration.rs"

[[test]]
name = "yarli_queue_postgres_integration"
path = "crates/yarli-queue/tests/postgres_integration.rs"

[[test]]
name = "yarli_store_postgres_integration"
path = "crates/yarli-store/tests/postgres_integration.rs"

[[test]]
name = "budget_breach_run_failure"
path = "tests/integration/tests/budget_breach_run_failure.rs"

[[test]]
name = "concurrency_stress"
path = "tests/integration/tests/concurrency_stress.rs"

[[test]]
name = "concurrent_runs"
path = "tests/integration/tests/concurrent_runs.rs"

[[test]]
name = "crash_recovery"
path = "tests/integration/tests/crash_recovery.rs"
required-features = ["chaos"]

[[test]]
name = "event_trail_consistency"
path = "tests/integration/tests/event_trail_consistency.rs"

[[test]]
name = "gate_verification_retry"
path = "tests/integration/tests/gate_verification_retry.rs"

[[test]]
name = "graceful_shutdown"
path = "tests/integration/tests/graceful_shutdown.rs"

[[test]]
name = "long_running_stability"
path = "tests/integration/tests/long_running_stability.rs"

[[test]]
name = "multi_task_lifecycle"
path = "tests/integration/tests/multi_task_lifecycle.rs"

[[test]]
name = "resource_exhaustion"
path = "tests/integration/tests/resource_exhaustion.rs"

[[test]]
name = "time_based_failure_scenarios"
path = "tests/integration/tests/time_based_failure_scenarios.rs"
