[package]
name = "yarli-api"
description = "gRPC services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
yarli-core = { workspace = true }
yarli-store = { workspace = true }
yarli-queue = { workspace = true }
yarli-gates = { workspace = true }
prometheus-client = { workspace = true }
yarli-policy = { workspace = true }
yarli-observability = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
debug-api = []

[dev-dependencies]
sqlx = { workspace = true }
tower = { version = "0.5", features = ["util"] }
