[package]
name = "yarli-git"
description = "Worktree, submodule, and merge orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
yarli-core = { workspace = true }
yarli-exec = { workspace = true }
yarli-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
