[package]
name = "yarli-observability"
description = "Tracing, metrics, and audit sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
yarli-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
