[package]
name = "yarli-integration-tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
yarli-core = { path = "../../crates/yarli-core" }
yarli-store = { path = "../../crates/yarli-store" }
yarli-queue = { path = "../../crates/yarli-queue" }
yarli-exec = { path = "../../crates/yarli-exec" }
yarli-gates = { path = "../../crates/yarli-gates" }
yarli-policy = { path = "../../crates/yarli-policy" }
yarli-observability = { path = "../../crates/yarli-observability" }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
